--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "google-auth-library": "^7.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "serve-favicon": "^2.5.0",
