update vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         "use": "@vercel/node"
       },
       {
-        "src": "build/**",
+        "src": "src/**/*",
         "use": "@vercel/static"
       }
     ],
@@ -17,7 +17,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "/build/$1"
+        "dest": "/src/index.html"
       }
     ]
   }
