--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
       },
       {
         "src": "src/**/*",
-        "use": "@vercel/static"
+        "use": "@vercel/static-build",
+        "config": { "distDir": "build" }
       }
     ],
     "routes": [
