--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,8 @@
         "use": "@vercel/node"
       },
       {
-        "src": "src/**/*",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "build" }
+        "src": "build/**",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
@@ -18,7 +17,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "/src/index.html"
+        "dest": "/build/index.html"
       }
     ]
   }
